--- a/cepniyasin-github-io/angular.json
+++ b/cepniyasin-github-io/angular.json
@@ -85,10 +85,8 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "public/assets",
+              "public/favicon.ico"
             ],
             "styles": [
               "src/styles.scss"
